--- a/style.css
+++ b/style.css
@@ -19,8 +19,22 @@ body {
 #content-body {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    grid-template-rows: repeat(2, 100px);
-    grid-gap: 3px;
+    grid-auto-rows: 75px;
+    grid-gap: 10px;
+    grid-auto-flow: dense;
+}
+
+.horizontal {
+    grid-column: span 2;
+}
+
+.vertical {
+    grid-row: span 2;
+}
+
+.big {
+    grid-column: span 4;
+    grid-row: span 4;
 }
 
 .footer {
