--- a/basic.css
+++ b/basic.css
@@ -7,5 +7,33 @@
 #content-body > div > img {
   width: 100%;
   height: 100%;
-  object-fit: fill;
+  object-fit: cover;
+  border-radius: 50%;
 }
+
+.slider {
+	width: 1024px;
+	margin: 2em auto;
+	
+}
+
+.slider-wrapper {
+	width: 400px;
+	height: 400px;
+	position: relative;
+}
+
+.slide {
+	float: left;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	transition: opacity 1s ease;
+	border-radius: 50%;
+}
+
+.slider-wrapper > .slide:first-child {
+	opacity: 1;
+}
+
